
-------------------------------------------------------------------------------

Mon Feb  4 10:39:42 EST 2002
(KainX)

Applied patch from Boris Buegling <boris@icculus.org> for XFree86 4.2.0.

-------------------------------------------------------------------------------

Sun Mar 23 22:45:31 EST 2003
(KainX)

Patch from Kim Woelders <kim@woelders.dk> for freedesktop.org WM hints.

-------------------------------------------------------------------------------

Sun Mar 23 22:59:34 EST 2003
(KainX)

Add Kim to the AUTHORS file, and run ecvs for the first time in ages.

-------------------------------------------------------------------------------

Wed Apr  2 17:46:57 EST 2003
(KainX)

Added the setup-gettext.sh script thanks to Christian Hammond
<chipx86@gnupdate.org>.

Replaced gettextize -f in autogen.sh with setup-gettext.sh.

Removed all files in intl/ since they should now be autogenerated by
whatever version of gettext is installed, and different versions have
different files.  Plus they're autogenerated anyway, so they shouldn't
be in CVS to begin with.

-------------------------------------------------------------------------------

Wed Apr  2 17:54:45 EST 2003
(KainX)

Added latest patch from Kim Woelders <kim@woelders.dk> to fix setting
of the _NET_DESKTOP_VIEWPORT hint.

-------------------------------------------------------------------------------

Thu Apr  3 11:32:31 EST 2003
(KainX)

Patch from Kim Woelders <kim@woelders.dk> to properly set
_NET_DESKTOP_GEOMETRY on desktop resize.

-------------------------------------------------------------------------------

Sun Apr  6 20:53:20 EDT 2003
(KainX)

Latest patch for EWMH from Kim.

-------------------------------------------------------------------------------

Mon Apr 21 22:07:42 EDT 2003
(KainX)

Patch from Christian Hammond <chipx86@portaldesign.net> for native
cursor support.

Patch from Kim Woelders <kim@woelders.dk> for further hint work.

Also fixed support for KDE hints.